# sub-rosa-executorch

./: .gitignore  ARCHITECTURE.md  DEMO_SCRIPT.md  LICENSE  MODELS.md  MODEL_EXPORT.md  NPU_HANDOFF.md  README.md  SUBMISSION.md  build.gradle.kts  gradle.properties  settings.gradle.kts  sub-rosa-build-brief.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: checklists.json  fake_notes.json  fake_notes_full.json  sample_transcript.json  sample_transcript_followup.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/subrosa/app/: MainActivity.kt  SubRosaApplication.kt
app/src/main/java/com/subrosa/app/data/: AssetReader.kt
app/src/main/java/com/subrosa/app/data/asr/: AudioRecorder.kt  LiveSpeakerId.kt  OnnxDiarizer.kt  WhisperEngine.kt  WhisperTranscriber.kt
app/src/main/java/com/subrosa/app/data/cases/: CaseStore.kt
app/src/main/java/com/subrosa/app/data/checklist/: AssetChecklistRepository.kt
app/src/main/java/com/subrosa/app/data/client/: ClientStore.kt
app/src/main/java/com/subrosa/app/data/crypto/: Crypto.kt
app/src/main/java/com/subrosa/app/data/demo/: DemoSeeder.kt  DemoTranscriber.kt
app/src/main/java/com/subrosa/app/data/docs/: DocumentStore.kt
app/src/main/java/com/subrosa/app/data/notes/: ExecuTorchNotesGenerator.kt  NotesJsonParser.kt  PromptAssembler.kt  SpeakerAttributor.kt
app/src/main/java/com/subrosa/app/data/report/: CaseReportPdf.kt
app/src/main/java/com/subrosa/app/di/: AppContainer.kt
app/src/main/java/com/subrosa/app/domain/: ChecklistRepository.kt  NotesGenerator.kt  Transcriber.kt
app/src/main/java/com/subrosa/app/llm/: FallbackTextEngine.kt  LlmEngine.kt  NpuRunnerEngine.kt  TextEngine.kt
app/src/main/java/com/subrosa/app/metrics/: Metrics.kt  MetricsCollector.kt  PrivacyMonitor.kt
app/src/main/java/com/subrosa/app/ui/: AppLock.kt  SessionViewModel.kt  SubRosaApp.kt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt  WhisperCpuConfig.kt
app/src/main/jniLibs/arm64-v8a/: README.md
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/subrosa/app/data/: AssetsParseTest.kt
gradle/: libs.versions.toml
patches/cpu-removal/: README.md  apply.sh  cpu-removal.patch
slides/: README.md  Sub_Rosa_Deck.html
tools/: push-models.sh
tools/genie-validate/: README.md  prompt.full_chatml.txt  prompt.smoke.txt  prompt.user_only.txt  run_genie_validation.sh
tools/qnn-export/: vm_a1.sh
(+25 files in other folders)
